correct inline alignment for edition buttons

--- a/imports/ui/components/commentary/commentary.import.less
+++ b/imports/ui/components/commentary/commentary.import.less
@@ -351,13 +351,10 @@ header .line-wrap {
 
         }
       }
-
     }
-
   }
 
   .revision-diff {
-
     table {
       padding: 20px 0 0;
     }
@@ -366,7 +363,11 @@ header .line-wrap {
     font-size: 18px;
 
   }
+}
 
+.edition-tab-outer {
+  display: inline-block;
+	
 }
 
 .edition-tab {
